<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="hello">Hello World, Click Me!</string>
    <string name="app_name">Wave_Android_uitest</string>
    <string name="activity_action">Activity</string>
    <string name="my_life_action">My Life</string>
    <string name="challenges_action">Challenges</string>
    <string name="people_action">People</string>
    <string name="actionbar_activity">Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="title_activity_first_launch">First Launch</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_first_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_scan_for_wave">Scan For Waves</string>
    <string name="sync_flavor_text">Syncing Data with Wave</string>
    <string-array name="sync_state_enum">
        <item>Connecting</item>
        <item>Checking Version</item>
        <item>Checking Time</item>
        <item>Setting Time</item>
        <item>Uploading Data</item>
        <item>Complete</item>
        <item>Error</item>
        <item>Aborting</item>
    </string-array>
    <string name="sync_sql_save">Saving Data&#8230;</string>
    <string name="sync_serial_label">Wave Serial:&#160;</string>
    <string name="sync_cancel">Cancel</string>
    <string-array name="scan_state_enum">
        <item>Waiting For Bluetooth</item>
        <item>Scanning</item>
        <item>Complete</item>
    </string-array>
    <string name="step_sync_flavor">Your steps pending sync: </string>
    <string name="step_sync_other_flavor">Other account steps pending: </string>
    <string name="step_sync_pending">Calculating...</string>
    <string name="step_sync_button_text">Sync now</string>
    <string name="scan_button_text">Scan</string>
    <string name="scan_known_waves_label">Previous Devices:</string>
    <string name="scan_new_waves_label">New Devices:</string>
    <string name="contact_email_subject">Contact from&#160;</string>
    <string-array name="contact_email_recipients">
        <item>info@getmovo.com</item>
    </string-array>
    <string name="title_activity_sync_status">SyncStatusActivity</string>
</resources>