<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Ready"
                android:padding="5pt"
                android:textStyle="italic"
                android:id="@+id/waveScanStatus"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/waveScanProgress"
                android:visibility="invisible"
                android:layout_alignTop="@+id/waveScanButton"
                android:layout_toStartOf="@+id/waveScanButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button_text"
                android:id="@+id/waveScanButton"
                android:enabled="true"
                android:layout_alignBaseline="@+id/waveScanStatus"
                android:layout_alignBottom="@+id/waveScanStatus"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5pt" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/movoBluetoothToggle"
            android:orientation="vertical"
            android:layout_below="@+id/relativeLayout">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5pt"
                    android:text="@string/scan_known_waves_label"
                    android:textColor="@android:color/black"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/knownWaveTitle"/>
                    <ListView
                        android:id="@+id/knownWaveList"
                        android:layout_width="fill_parent"
                        android:textColor="@android:color/black"
                        android:layout_height="fill_parent"
                        android:layout_below="@+id/knownWaveTitle"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5pt"
                    android:textColor="@android:color/black"
                    android:text="@string/scan_new_waves_label"
                    android:id="@+id/newWaveTitle"/>
                <ListView
                    android:id="@+id/newWaveList"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textColor="@android:color/black"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/newWaveTitle"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/movoBluetoothToggle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            >
            <TextView
                android:id="@+id/movoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="20sp"
                android:text="Turn Wave Bluetooth ON:\nPress the button until\nthe light shows blue."/>
            <ImageView
                android:id="@+id/movoButton"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/movoText"
                android:layout_width="140dip"
                android:layout_height="200dip"
                android:src="@drawable/first_sync_4"/>





        </RelativeLayout>


    </RelativeLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/waveScanProgress"
        android:layout_gravity="left"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>